/*
 * $Id: ChangeLog,v 1.1496 2003/09/19 17:05:48 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-09-19 13:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbapi.h
    * Uncommented #define HB_ARRAY_USE_COUNTER - Now using old array management by default.

2003-09-19 09:58 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/listbox.prg
  * utils/hbmake/hbmake.prg
    ! __CAPLENGT() to __CAPLENGTH()

  - include/hbgetcmt.ch
    - Removed, no longer needed.

  * tests/tstchbx.prg
    * Formatting.

2003-18-09 22:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/listbox.prg
    ! minor fix


2003-18-09 22:10 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
  * source/rtl/listbox.prg
    ! __CAPLENGT() to __CAPLENGTH()

2003-09-18 15:50 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * source/rtl/tget.prg
    * Check for !Empty(::type) @ 308 since Type can be NIL if no Picture.
    * This may not be the 'correct' fix, but solves the problem.

2003-09-18 16:40 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/hvm.c
  * source/vm/thread.c
    ! Waiting for threads to terminate before quitting.

  * source/rtl/hbservice.c
    ! More strict control over mutex unlocks before signal enabling.



2003-09-18 15:45 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * tests/Makefile
    ! added gtcgi to compilation if user selects HB_GT_LIB=gtcgi

  * source/rtl/hbservice.c
    ! Multithread compliancy under pthreads (unix/linux)

2003-09-17 10:46 UTC-0300 Antonio Carlos Pantaglione <toninho@fwi.com.br>
  * source/rtl/memoedit.prg
    ! clipper compatibility if user function is passed as ""

2003-09-17 14:42 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/make_rpm.sh
  * xharbour/xharbour.spec
    ! fixes for buggy RPM - automatic _topdir detection
