@@ -1,5 +1,5 @@
 /*
- * $Id: ads1.c,v 1.17 2003/08/13 02:28:42 ronpinkas Exp $
+ * $Id: ads1.c,v 1.18 2003/09/04 16:39:07 iananderson Exp $
  */
 
 /*
@@ -3198,7 +3198,10 @@ HB_FUNC( ADSCUSTOMIZEAOF )
          ulRecord = pArea->ulRecNo;
       }
       else if( ISNUM( 1 ) )             /* Passed a single recno */
+      {
+         ulNumRecs = 1;
          ulRecord = hb_parnl( 1 );
+      }
       else if( ISARRAY( 1 ) )           /* convert array of recnos to C array */
          ulNumRecs = hb_parinfa( 1, 0 );
 
